--- a/README.textile
+++ b/README.textile
@@ -2,8 +2,15 @@ h1. About
 
 Collection of some helpful small programs
 
-E.g. *CompareTwoFiles* which is really fast in doing a diff on two files.
+h2. *CompareTwoFiles*
+Fast in doing a diff on two files.
 
-h2. Build and Execute
+*Build and Execute:*
 
 * @mvn exec:java -Dexec.mainClass="de.dr0i.helper.CompareTwoFiles" -Dexec.args="fileA fileB"@
+
+h2. Elasticsearch reindexing
+Bulks download an elasticsearch index using `scroll_id` and index this into
+a new index. Makes use of https://github.com/moshe/elasticsearch_loader. Should
+work with ES version >2.4
+https://github.com/dr0i/helper/blob/master/src/main/bash/elasticsearchReindexing.sh
